--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ html, body{
 
 }
 
+b{
+    font-family: 'PoppinsMedium', 'Rubik', sans-serif;
+}
+
 .bg-top {
     position: absolute;
     top: 0px;
@@ -45,4 +49,58 @@ html, body{
     width: calc(100% - 20px);
     max-width: 800px;
     margin: 0px auto;
+}
+
+.card{
+    border-radius: 20px;
+    padding: 15px 20px;
+    font-size: 20px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1) !important;
+    border: none;
+}
+
+.container-img{
+    width: 60px;
+    height: 100px;
+    background-image: url('../img/6.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-right: 20px;
+    border-radius: 20px;
+}
+
+.infos{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.infos h1{
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: var(--color-black)
+}
+
+.infos-sub{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.status-open{
+    font-size: 14px;
+    margin-bottom: 0px;
+    color: var(--color-green);
+}
+
+.status-open.closed{
+    color: var(--color-red);
+}
+
+.link{
+    text-decoration: none !important;
+    font-size: 14px;
+    color: var(--color-primary) !important;
 }
