--- a/css/main.css
+++ b/css/main.css
@@ -429,3 +429,20 @@ textarea{
     font-size: 20px;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1) !important;
 }
+
+/* Sobre Empresa */
+
+.bg-top.sobre{
+    height: 180px;
+}
+
+.title-sobre {
+    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-right: 100px;
+}
+
+.sobre{
+    font-size: 14px;
+    color: var(--color-text);
+}
