--- a/css/main.css
+++ b/css/main.css
@@ -437,7 +437,7 @@ textarea{
 }
 
 .title-sobre {
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
     margin-top: 5px;
     margin-right: 100px;
 }
@@ -445,4 +445,17 @@ textarea{
 .sobre{
     font-size: 14px;
     color: var(--color-text);
+}
+
+.container-img-sobre {
+    position: absolute;
+    right: 20px;
+    margin-top: -50px;
+    width: 90px;
+    height: 90px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--color-white);
+    border-radius: 15px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1) !important;
 }
