--- a/css/main.css
+++ b/css/main.css
@@ -482,5 +482,11 @@ textarea{
     font-size: 18px;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1) !important;
     border: 1px solid #ffe28c !important;
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-full.voltar{
+    justify-content: center;
 }
