--- a/css/main.css
+++ b/css/main.css
@@ -493,3 +493,39 @@ textarea{
 
 /* carrinho */
 
+.bg-top.pedido{
+    height: 180px;
+}
+
+.container-detalhes {
+    display: flex;
+}
+
+.carrinho .detalhes-produto{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.carrinho .infos-produto{
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.carrinho .infos-produto .name{
+    font-size: 16px;
+}
+
+.carrinho .infos-produto .price{
+    font-size: 14px;
+    color: var(--color-black);
+}
+
+.carrinho .infos-produto .name-opcional,
+.carrinho .infos-produto .price-opcional{
+    font-size: 14px;
+    color: var(--color-text);
+    margin-left: 10px;
+}
